[project]
name = "hledger-textual"
version = "0.3.2"
description = "A full-featured terminal user interface for hledger plain-text accounting"
readme = "README.md"
authors = [
    { name = "Michele Broggi", email = "213027097+thesmokinator@users.noreply.github.com" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "babel>=2.18.0",
    "fpdf2>=2.8.0",
    "pricehist>=1.4.14",
    "textual>=3.0.0,<4",
    "textual-plotext>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/thesmokinator/hledger-textual"

[project.scripts]
hledger-textual = "hledger_textual.__main__:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.10",
    "textual-dev>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/hledger_textual --cov-report=term-missing"

[tool.coverage.run]
source = ["src/hledger_textual"]

[tool.coverage.report]
fail_under = 67

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
